# breaktime-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: package-macos-app.sh
src/: actions.rs  app.rs  main.rs  menu.rs  timer.rs  windows.rs
